[project]
name = "stocks-agent"
version = "0.0.1"
description = "Financial analysis agent with data pipeline and MongoDB integration"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.6",
    "python-dotenv>=1.0.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "pymongo>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.2.8",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src", "src.agents"]
package-dir = {"" = "."}

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
lint.select = ["E", "F", "I", "D", "T201", "UP"]
lint.ignore = ["UP006", "UP007", "UP035", "D417", "E501"]
lint.per-file-ignores = {"tests/*" = ["D", "UP"]}

